tdf#148635 no need to init ChartDataWrapper more than once

halves the time to finish a chart2

Change-Id: Ib7f066672878f7630c2d1c90b9487a14f2048029
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/133172
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>